Fix menu vertical alignment

--- a/style.css
+++ b/style.css
@@ -81,9 +81,5 @@ a, a:link, a:visited, a:focus, a:hover, a:active{
     text-decoration: none;
     color: #333;
     font-size: 30px;
-}
-
-.menu-item a:visited {
-    text-decoration: none;
-    color: #333;
+    align-items: center;
 }
